fix: fix ui issue on mobile

--- a/bridge-ui/src/components/internal-nav/internal-nav.module.scss
+++ b/bridge-ui/src/components/internal-nav/internal-nav.module.scss
@@ -23,6 +23,7 @@
     width: 100%;
     border-radius: 0.625rem;
     overflow: hidden;
+    text-align: start;
   }
 }
 
